--- a/storage/languages/en.json
+++ b/storage/languages/en.json
@@ -1,4 +1,42 @@
 {
-    "framework" : "Dynamic Framework",
-    "features"  : ["pretty URLs, database Layer, Exceptions Handler, Localization Ready"]
+    "Login to your account": "Login to your account",
+    "Forgot Password?": "Forgot Password?",
+    "Login": "Login",
+    "Don't have an Account?": "Don't have an Account?",
+    "Create Account": "Create Account",
+    "loading": "loading",
+    "login": "login",
+    "Create a new Account": "Create a new Account",
+    "Submir": "Submir",
+    "I agree to the": "I agree to the",
+    "Terms and Conditions": "Terms and Conditions",
+    "Submit": "Submit",
+    "Already have an Account?": "Already have an Account?",
+    "Welcome to your dashboard": "Welcome to your dashboard",
+    "Learn more below": "Learn more below",
+    "Learn more about flow": "Learn more about flow",
+    "Are you more of a visual learner?": "Are you more of a visual learner?",
+    "my_account": "my_account",
+    "settings": "settings",
+    "lock_screen": "lock_screen",
+    "logout": "logout",
+    "navigation": "navigation",
+    "dashboard": "dashboard",
+    "starter_page": "starter_page",
+    "profile": "profile",
+    "allow_notification": "allow_notification",
+    "support": "support",
+    "billings": "billings",
+    "organization": "organization",
+    "rtl": "rtl",
+    "My Profile": "My Profile",
+    "Settings": "Settings",
+    "Logout": "Logout",
+    "Navigation": "Navigation",
+    "Dashboard": "Dashboard",
+    "Starter Template": "Starter Template",
+    "Allow_notification": "Allow_notification",
+    "Allow notifications": "Allow notifications",
+    "Admin Settings": "Admin Settings",
+    "Visible Sidebar": "Visible Sidebar"
 }
