--- a/storage/languages/en.json
+++ b/storage/languages/en.json
@@ -50,5 +50,7 @@
     "Security": "Security",
     "Profile": "Profile",
     "Personal Details": "Personal Details",
-    "Notifications": "Notifications"
+    "Notifications": "Notifications",
+    "API Settings": "API Settings",
+    "Update Profile": "Update Profile"
 }
