✨ English Language file

--- a/storage/languages/en.json
+++ b/storage/languages/en.json
@@ -52,5 +52,6 @@
     "Personal Details": "Personal Details",
     "Notifications": "Notifications",
     "API Settings": "API Settings",
-    "Update Profile": "Update Profile"
+    "Update Profile": "Update Profile",
+    "What's New": "What's New"
 }
